Update mqr-quality -> mqrpy

--- a/notebooks/1-ConfidenceIntervals.ipynb
+++ b/notebooks/1-ConfidenceIntervals.ipynb
@@ -31,12 +31,12 @@
     "2. Confidence intervals\n",
     "The focus is on manufacturing assessments of quality statistics: defective proportions and the binomial distribution, defect counts and the Poisson distribution, and specification limits and the normal distribution.  \n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/"
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "170a023c-a71b-4aad-bee2-ccbe288cf13a",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
     "import mqr.nbtools as nb\n",
     "\n",
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version ', version('numpy'))\n",
     "print('Scipy version ', version('scipy'))\n",
     "print('Pandas version ', version('pandas'))\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ac77bdb8",
    "metadata": {},
    "outputs": [],
