--- a/notebooks/2-HypothesisTesting.ipynb
+++ b/notebooks/2-HypothesisTesting.ipynb
@@ -31,7 +31,7 @@
     "2. sample size calculators, and\n",
     "3. non-parametric statistical tests.\n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/"
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "\n",
     "\n",
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version ', version('numpy'))\n",
     "print('Scipy version ', version('scipy'))\n",
     "print('Pandas version ', version('pandas'))\n",
@@ -128,7 +128,7 @@
     "    86.4, 86.3, 86.8, 86.4, 86.6, 86.7, 86.0, 86.6, 86.2, 86.3\n",
     "    ])\n",
     "\n",
-    "sample = mqr.summary.Sample(data)\n",
+    "sample = mqr.process.Sample(data)\n",
     "\n",
     "# `reliability` is a great library, but doesn't allow much flexibility in plotting.\n",
     "# Here, let `reliability` create the figure, then adjust it for our purposes.\n",
