--- a/notebooks/3-ANOVA.ipynb
+++ b/notebooks/3-ANOVA.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "This notebook demonstrates one-way and two-way ANOVA analysis.  \n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/\n"
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/\n"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version', version('numpy'))\n",
     "print('Scipy version', version('scipy'))\n",
     "print('Pandas version', version('pandas'))\n",
