--- a/notebooks/4-FittedLineRegression.ipynb
+++ b/notebooks/4-FittedLineRegression.ipynb
@@ -31,7 +31,7 @@
     "2. Quadratic regression\n",
     "3. Cubic regression\n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/\n"
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/\n"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "from statsmodels.stats.outliers_influence import summary_table\n",
     "\n",
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version', version('numpy'))\n",
     "print('Scipy version', version('scipy'))\n",
     "print('Pandas version', version('pandas'))"
