--- a/notebooks/5-MultipleRegression.ipynb
+++ b/notebooks/5-MultipleRegression.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "This notebook demonstrates ordinary least squares regression of multiple variables.  The example considered is a simple AHRI compressor map fit of compressor capacity versus saturation and discharge temperature variables.  \n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/\n"
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/\n"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "from statsmodels.formula.api import ols\n",
     "\n",
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version', version('numpy'))\n",
     "print('Scipy version', version('scipy'))\n",
     "print('Pandas version', version('pandas'))"
