--- a/notebooks/7-DOE.ipynb
+++ b/notebooks/7-DOE.ipynb
@@ -32,7 +32,7 @@
     "3. Center Points\n",
     "4. Central Composite Designs\n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/\n"
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/\n"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "from mqr.doe import Design\n",
     "\n",
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version ', version('numpy'))\n",
     "print('Scipy version ', version('scipy'))\n",
     "print('Pandas version ', version('pandas'))\n",
