--- a/notebooks/7a-CatapultWorkshop.ipynb
+++ b/notebooks/7a-CatapultWorkshop.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "This notebook demonstrates a capstone problem on creating and analyzing factorial designs.  It starts with a fractional factorial design and finishes with a central composite design expansion.\n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/\n",
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/\n",
     "\n"
    ]
   },
@@ -53,7 +53,7 @@
     "from mqr.doe import Design\n",
     "\n",
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version ', version('numpy'))\n",
     "print('Scipy version ', version('scipy'))\n",
     "print('Pandas version ', version('pandas'))\n",
@@ -551,7 +551,7 @@
    "id": "c36f1c31-568d-4602-9053-71bccf4f6b6c",
    "metadata": {},
    "source": [
-    "Within the bounds [(-1, 1), (-1, 1), (-1, 1), (-1, 1)] and with $d_{bar} \\ge 1.5$, the optimizer determined a value of $s = 0.01$ can be found at  [1.0, 0.8, 1.0, -0.5].  Of course, the residual error of the objective function for $s$ was $\\pm 0.08$. But that is the design with minimal variability while still being able to to toss 1.5m.   "
+    "Within the coded bounds [(-1, 1), (-1, 1), (-1, 1), (-1, 1)] and with $d_{bar} \\ge 1.5$, the optimizer determined a value of $s = 0.01$ can be found at  [1.0, 0.8, 1.0, -0.5].  Of course, the residual error of the objective function for $s$ was $\\pm 0.08$. But that is the design with minimal variability while still being able to to toss 1.5m.   "
    ]
   }
  ],
