--- a/notebooks/6-GRR.ipynb
+++ b/notebooks/6-GRR.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "Herein are notes, examples and code to compute a gauge repeatability and reproducibility analysis.  \n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/"
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/"
    ]
   },
   {
@@ -46,7 +46,7 @@
     "import pandas as pd\n",
     "\n",
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version', version('numpy'))\n",
     "print('Scipy version', version('scipy'))\n",
     "print('Pandas version', version('pandas'))"
