--- a/notebooks/8-StatisticalQualityControl.ipynb
+++ b/notebooks/8-StatisticalQualityControl.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "This notebook demonstrates computing statistical process control charts.  \n",
     "\n",
-    "This notebook relies on the `mqr-quality` code library, found at https://pypi.org/project/mqr-quality/"
+    "This notebook relies on the `mqrpy` code library, found at https://pypi.org/project/mqrpy/"
    ]
   },
   {
@@ -47,7 +47,7 @@
     "from mqr.plot import Figure\n",
     "\n",
     "from importlib.metadata import version\n",
-    "print('MQR version', version('mqr-quality'))\n",
+    "print('MQR version', version('mqrpy'))\n",
     "print('Numpy version ', version('numpy'))\n",
     "print('Scipy version ', version('scipy'))\n",
     "print('Pandas version ', version('pandas'))"
