--- a/notebooks/9-AcceptanceSampling.ipynb
+++ b/notebooks/9-AcceptanceSampling.ipynb
@@ -47,10 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f8da030e-6e28-4598-be9b-9059ea36c8e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy version 1.26.4\n",
+      "Scipy version 1.13.1\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import scipy\n",
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5c11aa63-0dc4-4147-bf77-a6632f21d1a5",
    "metadata": {},
    "outputs": [],
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5d817f8d-dda6-46fa-8f68-63e084eab0ef",
    "metadata": {},
    "outputs": [],
@@ -127,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6b6c8bda-b74d-4f23-b363-a47cb95d526e",
    "metadata": {},
    "outputs": [],
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "69569d1e-446d-4b0c-b200-e046ad2080e4",
    "metadata": {},
    "outputs": [],
@@ -168,10 +177,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7c7ba1ad-2a37-4a2e-9061-f56d100ea467",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The best values found for (n,c) are [38.  4.]\n",
+      "The RMS residual error deviation of (alpha,beta) from target is 0.010372625903059832 .\n",
+      "\n",
+      "\n",
+      "The optimization report:\n",
+      "\n",
+      "             message: Optimization terminated successfully.\n",
+      "             success: True\n",
+      "                 fun: 0.010372625903059832\n",
+      "                   x: [ 3.800e+01  4.000e+00]\n",
+      "                 nit: 20\n",
+      "                nfev: 630\n",
+      "          population: [[ 3.800e+01  4.000e+00]\n",
+      "                       [ 3.800e+01  4.000e+00]\n",
+      "                       ...\n",
+      "                       [ 3.800e+01  4.000e+00]\n",
+      "                       [ 3.800e+01  4.000e+00]]\n",
+      " population_energies: [ 1.037e-02  1.037e-02 ...  1.037e-02  1.037e-02]\n"
+     ]
+    }
+   ],
    "source": [
     "res = scipy.optimize.differential_evolution(\n",
     "    func,\n",
@@ -196,10 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "619faba6-7987-4e89-a83c-995f07b68c74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using the sampling plan n= 38 , c= 4 :\n",
+      "   For an minimum AQL =  0.05  and a maximum LTPD =  0.2 :\n",
+      "   alpha risk: target =  0.05 , actual =  0.039726634206652234 .\n",
+      "   beta risk: target =  0.1 , actual =  0.09856845419182658 .\n"
+     ]
+    }
+   ],
    "source": [
     "nn = res.x[0].astype(int)\n",
     "cc = res.x[1].astype(int)\n",
@@ -250,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bbc06caf-bae8-4270-929c-0d2461624b5c",
    "metadata": {},
    "outputs": [],
@@ -273,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1357e0ab-3488-4fb9-a1b6-c888e1f8b9ef",
    "metadata": {},
    "outputs": [],
@@ -293,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5a4a44d2-13b4-4723-abc4-fb73c36e6018",
    "metadata": {},
    "outputs": [],
@@ -313,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a9fc994b-1d0e-44de-82b2-f213173b0b99",
    "metadata": {},
    "outputs": [],
@@ -333,10 +378,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0fe03726-1bc6-4231-9ed5-4b5165b901be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Given c =  1 the best values found for n is [46.]\n",
+      "The RMS residual error deviation of P from target is 0.0019962003755175234 .\n",
+      "\n",
+      "\n",
+      "The optimization report:\n",
+      "\n",
+      "             message: Optimization terminated successfully.\n",
+      "             success: True\n",
+      "                 fun: 0.0019962003755175234\n",
+      "                   x: [ 4.600e+01]\n",
+      "                 nit: 8\n",
+      "                nfev: 135\n",
+      "          population: [[ 4.600e+01]\n",
+      "                       [ 4.600e+01]\n",
+      "                       ...\n",
+      "                       [ 4.600e+01]\n",
+      "                       [ 4.600e+01]]\n",
+      " population_energies: [ 1.996e-03  1.996e-03 ...  1.996e-03  1.996e-03]\n"
+     ]
+    }
+   ],
    "source": [
     "res = scipy.optimize.differential_evolution(\n",
     "    func,\n",
@@ -361,10 +431,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "28801a48-77a6-4b31-87b3-3702591c455b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using the sampling plan n= 46 , c= 1 :\n",
+      "   With an acceptable defect rate of  0.1 :\n",
+      "   Risk: target =  0.05 , actual =  0.04800379962448248 .\n"
+     ]
+    }
+   ],
    "source": [
     "nn = res.x[0].astype(int)\n",
     "\n",
